--- a/todo/testAjax.html
+++ b/todo/testAjax.html
@@ -6,7 +6,7 @@
 $(document).ready(function(){
   $("button").click(function(){
     $.get("https://quantrimang.com/cong-nghe/file-aae-iphone-184410", function(data, status){
-      document.getElementById("demo").innerHTML = data
+      document.getElementById("demo").innerHTML = data;
     });
   });
 });
