test read from ajax

--- a/todo/testAjax.html
+++ b/todo/testAjax.html
@@ -6,7 +6,10 @@
 $(document).ready(function(){
   $("button").click(function(){
     $.get("https://quantrimang.com/cong-nghe/file-aae-iphone-184410", function(data, status){
-	  let doc = document.implementation.createHTMLDocument(data);
+	  let doc = document.implementation.createHTMLDocument("");
+	  doc.open();
+	  doc.write(data);
+	  doc.close();
 	  const userName = doc.getElementsByClassName("user-name");
       document.getElementById("demo").innerHTML = userName;
     });
