--- a/todo/testAjax.html
+++ b/todo/testAjax.html
@@ -5,7 +5,7 @@
 <script>
 $(document).ready(function(){
   $("button").click(function(){
-    $.get("https://quantrimang.com/cong-nghe/file-aae-iphone-184410", function(data, status){
+    $.get("demo_test.html", function(data, status){
 	  let doc = document.implementation.createHTMLDocument("");
 	  doc.open();
 	  doc.write(data);
